; ModuleID = '/home/carl/AnghaBench/h2o/deps/mruby/mrbgems/mruby-sprintf/src/extr_sprintf.c_sign_bits.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/mruby/mrbgems/mruby-sprintf/src/extr_sprintf.c_sign_bits.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8 (i32, i8*)* @sign_bits to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal signext i8 @sign_bits(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8, align 1
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %6 = load i32, i32* %3, align 4
  switch i32 %6, label %17 [
    i32 16, label %7
    i32 8, label %15
    i32 2, label %16
  ]

7:                                                ; preds = %2
  %8 = load i8*, i8** %4, align 8
  %9 = load i8, i8* %8, align 1
  %10 = sext i8 %9 to i32
  %11 = icmp eq i32 %10, 88
  br i1 %11, label %12, label %13

12:                                               ; preds = %7
  store i8 70, i8* %5, align 1
  br label %14

13:                                               ; preds = %7
  store i8 102, i8* %5, align 1
  br label %14

14:                                               ; preds = %13, %12
  br label %18

15:                                               ; preds = %2
  store i8 55, i8* %5, align 1
  br label %18

16:                                               ; preds = %2
  store i8 49, i8* %5, align 1
  br label %18

17:                                               ; preds = %2
  store i8 46, i8* %5, align 1
  br label %18

18:                                               ; preds = %17, %16, %15, %14
  %19 = load i8, i8* %5, align 1
  ret i8 %19
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
